# pixeltracker-bluefruit

./: .gitignore  LICENSE  README.md  mount.bat  pixeltracker.7z
src/: .gitignore  0.pubx  boot.py  gps.py  main.py  peripherals.py  pixeltracker.py  reader.py  ubxgps.py  utils.py  var.py
utils/: mount.bat  show-pubx.ipynb  ubxparser.py
utils/ubxparser/: README.md  setup.cfg
utils/ubxparser/tests/: oldubxparser.py  ubxparser.ows
utils/ubxparser/ubxparser/: .ubxparser.ows.swp.p  25 feb with bike and car.pubx  pixelmaps.bat  pixelmaps.ipynb  ubxmap.ipynb  ubxmaps.py  ubxparser.ipynb  ubxparser.ows  ubxparser.py
