[metadata]
# replace with your username:
name = ubxparser
version = 0.0.1
author = pixelpipe
author_email = pixelchain@gmail.com
description = UBX Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pixelpipe/ubxparser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6